--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,3 +478,147 @@ template {
 /*
  * Наш код пишем здесь
  */
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  overflow-y: scroll;
+}
+
+h1 {
+  font-family: 'Roboto Slab', serif;
+  font-weight: 300;
+  text-align: center;
+  letter-spacing: 0.1em;
+  font-size: 3.75rem;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.btn {
+  min-width: 250px;
+  height: 60px;
+  border: 2px solid #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: block;
+  font-size: 1.125rem;
+  text-align: center;
+  padding: 18px 20px;
+}
+
+.header {
+  min-height: 100vh;
+  background-color: #2d3651;
+  color: #ffffff;
+  background-image: url(../img/img-header.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 100px 0;
+  display: grid;
+  align-content: center;
+}
+
+.header-overlay {
+  background-color: #2d3651;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0.8;
+}
+
+.header-menu {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.header-menu__container, 
+.header-content__container {
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 1340px;
+  margin: auto;
+}
+
+.header-menu__container {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+}
+
+.header-logo {
+  font-size: 1.5rem;
+  letter-spacing: 0.1em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.header-logo__link {
+  padding: 20px 20px 20px 0;
+}
+
+.header-logo__accent {
+  display: inline-block;
+  border: 3px solid #d53d27;
+  padding: 15px 5px 15px 5px;
+  margin-right: 8px;
+}
+
+.header-navbar__btn {
+  display: none;
+}
+
+.header-navbar__list {
+  display: grid;
+  justify-content: end;
+  grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header-navbar__item {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.header-navbar__link {
+  display: block;
+  padding: 20px 10px;
+  font-size: 1.125rem;
+  letter-spacing: 0.1em;
+}
+
+.header-content {
+  position: relative;
+}
+
+.header-content__container {
+
+}
+
+.header-content__title {
+  margin: 0 0 51px 0;
+}
+
+.header-content__actions {
+  display: flex;
+  justify-content: center;
+}
+
+.header-content__actions .btn:first-of-type {
+  margin-right: 20px;
+}
