--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 /* Document
        ========================================================================== */
@@ -9,8 +10,7 @@
 html {
   line-height: 1.15;
   /* 1 */
-
-      -ms-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
@@ -42,9 +42,8 @@ section {
      * `article` contexts in Chrome, Firefox, and Safari.
      */
 h1 {
-  margin: 0.67em 0;
-
   font-size: 2em;
+  margin: 0.67em 0;
 }
 
 /* Grouping content
@@ -69,13 +68,12 @@ figure {
      * 2. Show the overflow in Edge and IE.
      */
 hr {
-  /* 1 */
-  overflow: visible;
-
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   /* 1 */
   height: 0;
+  /* 1 */
+  overflow: visible;
   /* 2 */
 }
 
@@ -106,7 +104,6 @@ pre {
 a {
   background-color: transparent;
   /* 1 */
-
   -webkit-text-decoration-skip: objects;
   /* 2 */
 }
@@ -118,14 +115,12 @@ a {
      * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
      */
 abbr[title] {
-  /* 1 */
-          text-decoration: underline;
-          text-decoration: underline dotted;
-
   border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
   /* 2 */
-
   -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -169,8 +164,8 @@ dfn {
      * Add the correct background and color in IE 9-.
      */
 mark {
-  color: #000000;
-  background-color: #ffff00;
+  background-color: #ff0;
+  color: #000;
 }
 
 /**
@@ -186,12 +181,10 @@ small {
      */
 sub,
 sup {
-  position: relative;
-
-  vertical-align: baseline;
-
   font-size: 75%;
   line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
@@ -217,7 +210,6 @@ video {
      */
 audio:not([controls]) {
   display: none;
-
   height: 0;
 }
 
@@ -246,14 +238,13 @@ input,
 optgroup,
 select,
 textarea {
-  /* 1 */
-  margin: 0;
-
   font-family: sans-serif;
   /* 1 */
   font-size: 100%;
   /* 1 */
   line-height: 1.15;
+  /* 1 */
+  margin: 0;
   /* 2 */
 }
 
@@ -303,9 +294,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  padding: 0;
-
   border-style: none;
+  padding: 0;
 }
 
 button:-moz-focusring,
@@ -348,18 +338,16 @@ input {
      * 2. Correct the outline style in Safari.
      */
 [type="search"] {
+  -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
-
-  -webkit-appearance: textfield;
   /* 2 */
   /**
        * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
        */
 }
 
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
+[type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -368,10 +356,9 @@ input {
      * 2. Change font properties to `inherit` in Safari.
      */
 ::-webkit-file-upload-button {
+  -webkit-appearance: button;
   /* 1 */
   font: inherit;
-
-  -webkit-appearance: button;
   /* 2 */
 }
 
@@ -389,21 +376,18 @@ fieldset {
      *    `fieldset` elements in all browsers.
      */
 legend {
-  /* 1 */
-  display: table;
-
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  /* 1 */
+  display: table;
   /* 1 */
   max-width: 100%;
   /* 1 */
   padding: 0;
-  /* 2 */
-
-  white-space: normal;
   /* 3 */
-
   color: inherit;
+  /* 2 */
+  white-space: normal;
   /* 1 */
 }
 
@@ -414,7 +398,6 @@ legend {
 progress {
   display: inline-block;
   /* 1 */
-
   vertical-align: baseline;
   /* 2 */
 }
@@ -474,13 +457,9 @@ template {
   display: none;
 }
 
-
-/*
- * Наш код пишем здесь
- */
-
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -511,6 +490,8 @@ a {
   text-align: center;
   padding: 18px 20px;
   letter-spacing: 0.1em;
+  -webkit-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
   transition: background-color 0.5s;
 }
 
@@ -542,7 +523,8 @@ a {
   position: relative;
   padding: 100px 0;
   display: grid;
-  align-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .header-overlay {
@@ -563,18 +545,16 @@ a {
   right: 0;
 }
 
-.header-menu__container, 
-.header-content__container {
+.header-menu__container {
   padding-left: 20px;
   padding-right: 20px;
   width: 1340px;
   margin: auto;
-}
-
-.header-menu__container {
   display: grid;
   grid-template-columns: auto 1fr;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header-logo {
@@ -601,7 +581,10 @@ a {
 
 .header-navbar__list {
   display: grid;
-  justify-content: end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
   grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
   list-style: none;
   margin: 0 -20px 0 0;
@@ -618,11 +601,13 @@ a {
   padding: 20px 10px;
   font-size: 1.125rem;
   letter-spacing: 0.09em;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
   transition: color 0.5s;
 }
 
-.header-navbar__link:hover {
-  color:#d66926;
+.header-navbar__link:hover, .header-navbar__link:focus {
+  color: #d66926;
 }
 
 .header-content {
@@ -630,7 +615,10 @@ a {
 }
 
 .header-content__container {
-
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 1340px;
+  margin: auto;
 }
 
 .header-content__title {
@@ -638,8 +626,12 @@ a {
 }
 
 .header-content__actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header-content__actions .btn:first-of-type {
@@ -660,8 +652,12 @@ a {
 }
 
 .skills__actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .skill-item {
@@ -673,40 +669,15 @@ a {
 .skill-item:hover .skill-item__overlay {
   opacity: 0.95 !important;
 }
+
 .skill-item:hover .skill-item__image {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
+
 .skill-item:hover .skill-item__link {
-  color:#d66926;
-}
-
-.skill-item:nth-of-type(1) {
-  grid-area: a1;
-}
-
-.skill-item:nth-of-type(2) {
-  grid-area: a2;
-}
-.skill-item:nth-of-type(3) {
-  grid-area: a3;
-}
-.skill-item:nth-of-type(4) {
-  grid-area: a4;
-}
-.skill-item:nth-of-type(5) {
-  grid-area: a5;
-}
-.skill-item:nth-of-type(6) {
-  grid-area: a6;
-}
-.skill-item:nth-of-type(7) {
-  grid-area: a7;
-}
-.skill-item:nth-of-type(8) {
-  grid-area: a8;
-}
-.skill-item:nth-of-type(9) {
-  grid-area: a9;
+  color: #d66926;
 }
 
 .skill-item__overlay {
@@ -716,6 +687,8 @@ a {
   bottom: 0;
   left: 0;
   z-index: 1;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
 
@@ -729,7 +702,11 @@ a {
   right: 0;
   bottom: 0;
   left: 0;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
   transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
 .skill-item__title {
@@ -745,17 +722,65 @@ a {
 }
 
 .skill-item__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 20px;
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
   transition: color 0.5s;
 }
+
+.skill-item:nth-of-type(1) {
+  grid-area: a1;
+}
+
+.skill-item:nth-of-type(2) {
+  grid-area: a2;
+}
+
+.skill-item:nth-of-type(3) {
+  grid-area: a3;
+}
+
+.skill-item:nth-of-type(4) {
+  grid-area: a4;
+}
+
+.skill-item:nth-of-type(5) {
+  grid-area: a5;
+}
+
+.skill-item:nth-of-type(6) {
+  grid-area: a6;
+}
+
+.skill-item:nth-of-type(7) {
+  grid-area: a7;
+}
+
+.skill-item:nth-of-type(8) {
+  grid-area: a8;
+}
+
+.skill-item:nth-of-type(9) {
+  grid-area: a9;
+}
+
+/*
+     * Наш код пишем здесь
+     */
 
 @media (max-height: 690px) {
   .skill-item {
