--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -5,14 +5,18 @@
    left: 0;
    right: 0;
 
-   &__container{
-    padding-left: 20px;
-    padding-right: 20px;
-    width: 1340px;
-    margin: auto;
+   @include md {
+    background-color: rgba($color-gray-dark, 0.25);
+    @include box-shadow;
+   }
+
+   &__container {
+    @extend %container;
 
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
+
   }
- }
+}
+
