--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -1,7 +1,7 @@
 .header {
    min-height: 100vh;
-   background-color: #2d3651;
-   color: #ffffff;
+   background-color: $color-primary;
+   color: $color-light;
    background-image: url(../img/img-header.png);
    background-position: center;
    background-size: cover;
