--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,6 +457,20 @@ template {
   display: none;
 }
 
+/* ul */
+/* xl */
+/* lg */
+/* md */
+/* sm */
+/* xs */
+/* xx */
+.header-menu__container, .header-content__container {
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 1340px;
+  margin: auto;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -464,16 +478,15 @@ template {
 
 html {
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow-y: scroll;
 }
 
 h1 {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-weight: 300;
   text-align: center;
   letter-spacing: 0.08em;
-  font-size: 3.75rem;
   line-height: 1.2em;
 }
 
@@ -483,12 +496,8 @@ a {
 }
 
 .btn {
-  min-width: 250px;
-  height: 60px;
   display: block;
-  font-size: 1.125rem;
   text-align: center;
-  padding: 18px 20px;
   letter-spacing: 0.1em;
   -webkit-transition: background-color 0.5s;
   -o-transition: background-color 0.5s;
@@ -498,13 +507,14 @@ a {
 .btn--light {
   border: 2px solid #ffffff;
   background-color: rgba(255, 255, 255, 0.1);
-  width: 250px;
 }
 
 .btn--primary {
+  font-size: 1.125rem;
+  height: 60px;
+  padding: 18px 20px;
   border: 2px solid #2d3651;
   background-color: rgba(45, 54, 81, 0.8);
-  width: 350px;
 }
 
 .btn--primary:hover,
@@ -546,10 +556,6 @@ a {
 }
 
 .header-menu__container {
-  padding-left: 20px;
-  padding-right: 20px;
-  width: 1340px;
-  margin: auto;
   display: grid;
   grid-template-columns: auto 1fr;
   -webkit-box-align: center;
@@ -576,16 +582,68 @@ a {
 }
 
 .header-navbar__btn {
-  display: none;
+  width: 30px;
+  height: 22.5px;
+  position: relative;
+  margin: 20px 0;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+.header-navbar__btn-row {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: #ffffff;
+  border-radius: 3px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.header-navbar__btn-row:nth-child(1) {
+  top: 0px;
+}
+
+.header-navbar__btn-row:nth-child(2) {
+  top: 9px;
+}
+
+.header-navbar__btn-row:nth-child(3) {
+  top: 18px;
+}
+
+.header-navbar__btn.active span:nth-child(1) {
+  top: 9px;
+  -webkit-transform: rotate(135deg);
+      -ms-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+.header-navbar__btn.active span:nth-child(2) {
+  opacity: 0;
+  left: -30px;
+}
+
+.header-navbar__btn.active span:nth-child(3) {
+  top: 9px;
+  -webkit-transform: rotate(-135deg);
+      -ms-transform: rotate(-135deg);
+          transform: rotate(-135deg);
 }
 
 .header-navbar__list {
-  display: grid;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-  grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
-  grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
   list-style: none;
   margin: 0 -20px 0 0;
   padding: 0;
@@ -615,14 +673,7 @@ a {
 }
 
 .header-content__container {
-  padding-left: 20px;
-  padding-right: 20px;
-  width: 1340px;
-  margin: auto;
-}
-
-.header-content__title {
-  margin: 0 0 53px 0;
+  display: grid;
 }
 
 .header-content__actions {
@@ -634,21 +685,10 @@ a {
           justify-content: center;
 }
 
-.header-content__actions .btn:first-of-type {
-  margin-right: 20px;
-}
-
-.skills {
-  padding: 10px;
-  margin-bottom: 30px;
-}
-
 .skills__container {
+  min-height: 100vh;
   display: grid;
-  grid-template-areas: 'a1 a1 a2 a3' 'a4 a5 a5 a6' 'a7 a8 a9 a6';
-  grid-auto-rows: calc(33.333vh - 13.333px);
-  gap: 10px;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .skills__actions {
@@ -663,7 +703,13 @@ a {
 .skill-item {
   background-color: #2d3651;
   position: relative;
+  display: grid;
   overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  justify-items: center;
 }
 
 .skill-item:hover .skill-item__overlay {
@@ -690,11 +736,14 @@ a {
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
+  opacity: 0.8;
+  background-color: #2d3651;
 }
 
 .skill-item__image {
   height: 100%;
   background-position: center;
+  background-color: #2d3651;
   background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
@@ -717,7 +766,6 @@ a {
   left: 0;
   margin: 0;
   z-index: 2;
-  font-size: 1.25rem;
   letter-spacing: 0.1em;
 }
 
@@ -732,6 +780,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
   padding: 20px;
+  height: 100%;
   position: absolute;
   top: 0;
   right: 0;
@@ -782,8 +831,159 @@ a {
      * Наш код пишем здесь
      */
 
+@media (min-width: 576px) {
+  .btn--primary {
+    width: 350px;
+  }
+  .header-content__actions .btn:first-of-type {
+    margin-right: 20px;
+  }
+  .skills {
+    padding: 10px 10px 40px;
+  }
+}
+
+@media (min-height: 691px) {
+  .skills {
+    grid-auto-rows: calc(33.333vh - 13.333px);
+  }
+}
+
+@media (min-width: 768px) {
+  .header-navbar__btn {
+    display: none;
+  }
+  .header-navbar__list {
+    display: grid;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+    grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
+    grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+  }
+  .skill-item__title {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 992px) {
+  h1 {
+    font-size: 3.75rem;
+  }
+  .btn--light {
+    height: 60px;
+    padding: 18px 20px;
+    min-width: 250px;
+    font-size: 1.125rem;
+  }
+  .header-content__title {
+    margin: 0 0 53px 0;
+  }
+  .skills__container {
+    grid-template-areas: 'a1 a1 a2 a3' 'a4 a5 a5 a6' 'a7 a8 a9 a6';
+    gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 991.8px) and (min-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  .btn--light {
+    height: 50px;
+    padding: 14px 20px;
+    min-width: 200px;
+  }
+  .btn--light {
+    height: 40px;
+    padding: 9px 20px;
+    min-width: 170px;
+  }
+  .header-content__title {
+    margin: 0 0 43px 0;
+  }
+  .skills__container {
+    grid-template-areas: 'a1 a1 a2' 'a3 a4 a4' 'a5 a5 a6' 'a7 a8 a6' 'a7 a9 a9';
+    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 767.8px) {
+  h1 {
+    font-size: 1.875rem;
+  }
+  .header-menu {
+    background-color: rgba(68, 89, 110, 0.25);
+    -webkit-box-shadow: -3px 3px 20px -10px black;
+            box-shadow: -3px 3px 20px -10px black;
+  }
+  .header-navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .header-navbar__list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 40px;
+    text-align: right;
+    background-color: rgba(68, 89, 110, 0.9);
+    -webkit-box-shadow: -3px 3px 20px -10px black;
+            box-shadow: -3px 3px 20px -10px black;
+  }
+  .header-content__title {
+    margin: 0 0 33px 0;
+  }
+  .skill-item__title {
+    font-size: 1.125rem;
+  }
+}
+
+@media (max-width: 767.8px) and (min-width: 576px) {
+  .skills__container {
+    grid-template-areas: 'a1 a2' 'a3 a2' 'a4 a4' 'a5 a6' 'a5 a7' 'a8 a9';
+    gap: 10px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 @media (max-height: 690px) {
+  .skills {
+    grid-auto-rows: calc(33.333vh - 13.333px);
+  }
   .skill-item {
     grid-auto-rows: calc(230px - 13.333px);
+  }
+}
+
+@media (max-width: 575.8px) {
+  .btn--primary {
+    width: 100%;
+  }
+  .header-content__actions {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header-content__actions .btn:first-of-type {
+    margin-bottom: 20px;
+  }
+  .skills {
+    padding: 20px;
+  }
+  .skills__container {
+    grid-template-areas: 'a1' 'a2' 'a3' 'a4' 'a5' 'a6' 'a7' 'a8' 'a9';
+    gap: 20px;
+    grid-template-columns: 1fr;
   }
 }
