--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,3 +1,21 @@
+@mixin unlist ($m: 0, $p: 0) {
+  list-style: none;
+  margin: $m;
+  padding: $p;
+}
+
+@mixin abs-position ($t: 0, $r: 0, $b: 0, $l: 0) {
+  position: absolute;
+    top: $t;
+    right: $r;
+    bottom: $b;
+    left: $l;
+}
+
+@mixin box-shadow {
+  box-shadow: -3px 3px 20px -10px darken($color-gray-dark, 40%);
+}
+
 @mixin text-shortener {
   display: block;
   overflow: hidden;
@@ -42,4 +60,4 @@
   padding: 0;
 
   border: 0;
-}
+}
