--- a/assets/scss/header/_header-content.scss
+++ b/assets/scss/header/_header-content.scss
@@ -2,21 +2,40 @@
   position: relative;
 
   &__container {
-    padding-left: 20px;
-    padding-right: 20px;
-    width: 1340px;
-    margin: auto;
+    display: grid;
+    @extend %container;
   }
 
   &__title {
-    margin: 0 0 53px 0;
+    @include lg-min {
+      margin: 0 0 53px 0;
+    }
+
+    @include lg-md {
+      margin: 0 0 43px 0;
+    }
+
+    @include md {
+      margin: 0 0 33px 0;
+    }
   }
   &__actions {
     display: flex;
     justify-content: center;
 
+    @include sm {
+      flex-direction: column;
+      align-items: center;
+    }
+
     .btn:first-of-type {
-      margin-right: 20px;
+      @include sm-min {
+        margin-right: $gap;
+      }
+      @include sm {
+        margin-bottom: $gap;
+      }
     }
   }
 }
+
