--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,10 +1,10 @@
 
 @import "../../libs/normalize-scss/sass/normalize/import-now";
-// @import "skin";
-// @import "variables";
-// @import "mixins";
-// @import "mixins-media";
-// @import "extends";
+@import "skin";
+@import "variables";
+@import "mixins";
+@import "mixins-media";
+@import "extends";
 
 @import "common";
 @import "header/header";
@@ -14,7 +14,8 @@
 @import "header/header-navbar";
 @import "header/header-content";
 
-@import "sections/section-skills";
+@import "sections/section-skills/skills";
+@import "sections/section-skills/skill-item";
 @import "sections/section-about";
 @import "sections/section-form";
 @import "sections/section-posts";
