change_position:_relative
.header-navbar {
  position: relative;
}

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,6 +581,10 @@ a {
   margin-right: 4px;
 }
 
+.header-navbar {
+  position: relative;
+}
+
 .header-navbar__btn {
   width: 30px;
   height: 22.5px;
