--- a/assets/scss/header/_header-navbar.scss
+++ b/assets/scss/header/_header-navbar.scss
@@ -1,4 +1,5 @@
 .header-navbar {
+  position: relative;
   @include md {
     display: flex;
     justify-content: flex-end;
@@ -59,7 +60,6 @@
   }
 
   &__list {
-    
     @include unlist (0 (-$gap) 0 0);
     @include md-min {
       display: grid;
